Fixed a gap in the drop-down caused by the border-radius inheritance.

--- a/styles/stylesheet.scss
+++ b/styles/stylesheet.scss
@@ -401,6 +401,7 @@ li:hover > .drop-down-menu{
 }
 
 .drop-down-menu li{
+	border-radius: 0;
 	border-top-color: rgba(0, 0, 0, .12);
 	border-top-style: solid;
 	border-top-width: 1px;
